--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Mazaak</title>
+<script src = "main.js">
 </head>
 <body>
   <button onclick = mazaak()>View my project</button>
