--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Mazaak</title>
-<script src = "main.js">
+<script src = "github.com/drtg812/kaisa-laga-mera-mazaak/main.js">
 </head>
 <body>
   <button onclick = mazaak()>View my project</button>
